<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    android:background="@android:color/transparent"
    android:textDirection="ltr">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginTop="55dp"
        android:orientation="vertical">


        <TextView
            android:id="@+id/txt_report"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="15dp"
            android:text="@string/report"
            android:textColor="@color/colorAccent"
            android:textSize="30dp" />

        <TextView
            android:id="@+id/txt_typereport"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:text="@string/type_report"
            android:textColor="@color/colorAccent"
            android:textSize="15dp" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="left"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:visibility="visible">

            <RadioButton
                android:id="@+id/rb1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="15dp"
                android:layout_weight="1"
                android:checked="true"
                android:gravity="center"
                android:layoutDirection="ltr"
                android:text="@string/Problem"
                android:textSize="15dp" />

            <RadioButton
                android:id="@+id/rb2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="15dp"
                android:layout_weight="1"
                android:gravity="center"
                android:layoutDirection="ltr"
                android:text="@string/Suggestion"
                android:textSize="15dp" />

            <RadioButton
                android:id="@+id/rb3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="15dp"
                android:layout_weight="1"
                android:gravity="center"
                android:layoutDirection="ltr"
                android:text="@string/Another"
                android:textSize="15dp" />
        </RadioGroup>

        <TextView
            android:id="@+id/txt_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="15dp"
            android:text="@string/description"
            android:textColor="@color/colorAccent"
            android:textSize="15dp" />

        <EditText
            android:id="@+id/edit_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:ems="10"
            android:gravity="start"
            android:hint="@string/description_report"
            android:inputType="textMultiLine"
            android:maxLength="500"
            android:maxLines="5"
            android:paddingRight="5dp"
            android:paddingTop="5dp"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/txt_editmax"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:gravity="left"
            android:text="0 / 500"
            android:textStyle="bold" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Cancel"
                android:textColor="@color/colorAccent" />

            <TextView
                android:id="@+id/txt_ok"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Ok"
                android:textColor="@color/colorAccent" />


        </LinearLayout>
    </LinearLayout>
</RelativeLayout>