<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#123"
    android:gravity="center"
    android:padding="10dp"
    android:orientation="vertical"
    tools:context="com.example.mosalah95.focuspower.ResultActivity">


    <TextView
        android:id="@+id/earned_points"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:gravity="center"
        android:text="@string/earned_point"
        android:textColor="#fff"
        android:textSize="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:background="#223e60"
        android:padding="10dp"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/wrong_answers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/wrong_answer"
            android:textColor="#f91c1c"
            android:textSize="17dp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:gravity="center"
            android:text="|"
            android:textColor="#ffffff"
            android:textSize="15dp" />


        <TextView
            android:id="@+id/correct_answers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/correct_answer"
            android:textColor="@android:color/holo_green_light"
            android:textSize="17dp" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/points_w"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:gravity="center"
            android:background="#d5b10113"
            android:text="0"
            android:textColor="#ffffff"
            android:textSize="20dp" />


        <TextView
            android:id="@+id/points_c"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:background="#d21ca903"
            android:gravity="center"
            android:text="0"
            android:textColor="#ffffff"
            android:textSize="20dp" />


    </LinearLayout>


    <com.beardedhen.androidbootstrap.BootstrapButton
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:onClick="NextLevel"
        android:text="@string/next"
        app:bootstrapBrand="success"
        app:bootstrapSize="lg"
        app:buttonMode="regular"
        app:roundedCorners="true"
        app:showOutline="false" />


    <com.beardedhen.androidbootstrap.BootstrapButton
        android:id="@+id/btn_home"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:onClick="backToHome"
        android:text="@string/warp_home"
        app:bootstrapBrand="info"
        app:bootstrapSize="lg"
        app:buttonMode="regular"
        app:roundedCorners="true"
        app:showOutline="false" />


</LinearLayout>
