<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#123"
    android:orientation="vertical"
    tools:context="com.example.mosalah95.focuspower.MainActivity">


    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/image_Coins"
                android:layout_width="35dp"
                android:layout_height="35dp"
                app:srcCompat="@drawable/coins" />

            <TextView
                android:id="@+id/text_Coins"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:gravity="left|center_vertical"
                android:text="100"
                android:textColor="@android:color/white"
                android:textSize="18sp" />
            <TextView
                android:id="@+id/text_lang"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_weight="0.2"
                android:layout_marginRight="20dp"
                android:gravity="center"
                android:text="EN"
                android:background="#cae4ed"
                android:textColor="@android:color/white"
                android:textSize="22sp" />
        </LinearLayout>

    </FrameLayout>

    <ImageView
        android:id="@+id/Image_Logo"
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        app:srcCompat="@drawable/logo"
        android:layout_gravity="center" />



    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/text_Level"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/level"
        android:textColor="@android:color/white"
        android:textSize="24sp" />



    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">


        <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/btn_play"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="PlayGame"
            android:text="@string/start_game"
            app:bootstrapBrand="success"
            app:bootstrapSize="lg"
            app:buttonMode="regular"
            app:roundedCorners="true"
            app:showOutline="false" />


        <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/btn_shop"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="openShop"
            android:text="@string/Shop"
            app:bootstrapBrand="warning"
            app:bootstrapSize="lg"
            app:buttonMode="regular"
            app:roundedCorners="true"
            app:showOutline="false" />




    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

    <com.beardedhen.androidbootstrap.BootstrapButton
        android:id="@+id/btn_points"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:layout_weight="1"
        android:onClick="StartAds"
        android:text="@string/watch_ads"
        app:bootstrapBrand="primary"
        app:bootstrapSize="sm"
        app:buttonMode="regular"
        app:roundedCorners="true"
        app:showOutline="false" />

    <com.beardedhen.androidbootstrap.BootstrapButton
        android:id="@+id/btn_settings"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:onClick="OpenSettings"
        android:text="@string/Settings"
        app:bootstrapBrand="info"
        app:bootstrapSize="lg"
        app:buttonMode="regular"
        app:roundedCorners="true"
        app:showOutline="false" />

    </LinearLayout>

    <com.beardedhen.androidbootstrap.BootstrapButton
        android:id="@+id/btn_quit"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:onClick="QuitGame"
        android:text="@string/Exit"
        app:bootstrapBrand="danger"
        app:bootstrapSize="lg"
        app:buttonMode="regular"
        app:roundedCorners="true"
        app:showOutline="false" />


    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" />


    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="@string/banner">
    </com.google.android.gms.ads.AdView>


</LinearLayout>
