<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:ignore="DuplicateIds, SpUsage">


    <TextView
        android:id="@+id/txt_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:gravity="center"
        android:layout_weight="10"
        android:text="@string/tools_shop"
        android:textSize="22sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="90"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:gravity="center"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="250dp"
                android:layout_height="180dp"
                app:cardCornerRadius="30dp"
                android:layout_margin="5dp"
                >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="#eee">



                <TextView
                    android:id="@+id/txt_title1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:gravity="center"
                    android:text="@string/increase_time"
                    android:textSize="20dp" />


                <TextView
                    android:id="@+id/txt_description1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:gravity="center"
                    android:text="@string/description_time"
                    android:textSize="20dp" />


                <com.beardedhen.androidbootstrap.BootstrapButton
                    android:id="@+id/btn_buy1"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="30dp"
                    android:text="750 coin"
                    app:bootstrapBrand="success"
                    app:bootstrapSize="lg"
                    app:buttonMode="regular"
                    app:roundedCorners="true"
                    app:showOutline="false" />
              </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="250dp"
                android:layout_height="180dp"
                android:layout_margin="5dp"
                app:cardCornerRadius="30dp"
                >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="#eee">




                <TextView
                    android:id="@+id/txt_title2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:gravity="center"
                    android:text="@string/increase_money"
                    android:textSize="20dp" />


                <TextView
                    android:id="@+id/txt_description2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:gravity="center"
                    android:text="@string/description_money"
                    android:textSize="20dp" />


                <com.beardedhen.androidbootstrap.BootstrapButton
                    android:id="@+id/btn_buy2"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="5dp"
                    android:text="1500 coin"
                    app:bootstrapBrand="success"
                    app:bootstrapSize="lg"
                    app:buttonMode="regular"
                    app:roundedCorners="true"
                    app:showOutline="false" />
            </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="250dp"
                android:layout_height="180dp"
                android:layout_margin="5dp"
                app:cardCornerRadius="30dp"
                >
                <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                    android:background="#eee">


                <TextView
                    android:id="@+id/txt_title3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:gravity="center"
                    android:text="@string/Reduce_money"
                    android:textSize="20dp" />


                <TextView
                    android:id="@+id/txt_description3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:gravity="center"
                    android:text="@string/description_Reduce"
                    android:textSize="20dp" />


                <com.beardedhen.androidbootstrap.BootstrapButton
                    android:id="@+id/btn_buy3"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="5dp"
                    android:text="300 coin"
                    app:bootstrapBrand="success"
                    app:bootstrapSize="lg"
                    app:buttonMode="regular"
                    app:roundedCorners="true"
                    app:showOutline="false" />
            </LinearLayout>
            </android.support.v7.widget.CardView>


        </LinearLayout>
    </ScrollView>


</LinearLayout>